crates/wdl-grammar/tests/parsing/empty-document/source.errors
error: a WDL document must start with a version statement
  ┌─ tests/parsing/empty-document/source.wdl:1:1
  │
1 │ 
  │  

