crates/wdl-grammar/tests/parsing/empty-document/source.tree
RootNode@0..0
